# lyra

./: .gitignore  Rules.md
lyra/: dune-project
lyra/_build/: .db  .digest-db  log
lyra/_build/default/: META.lyra  lyra.dune-package  lyra.install  lyra.opam
lyra/_build/default/.dune/: configurator  configurator.v2
lyra/_build/default/lib/: lyra.cma  lyra.cmxa  lyra.cmxs  lyra.mli
lyra/_build/default/lib/.lyra.objs/byte/: lyra.cmi  lyra.cmo  lyra.cmt  lyra.cmti
lyra/_build/default/lib/.lyra.objs/native/: lyra.cmx
lyra/_build/default/lib/.merlin-conf/: lib-lyra
lyra/_build/default/test/.merlin-conf/: exe-test_lyra
lyra/_build/default/test/.test_lyra.eobjs/byte/: dune__exe__Test_lyra.cmi  dune__exe__Test_lyra.cmti
lyra/_build/default/test/.test_lyra.eobjs/native/: dune__exe__Test_lyra.cmx
lyra/_build/install/default/lib/lyra/: META  dune-package  lyra.cma  lyra.cmi  lyra.cmt  lyra.cmti  lyra.cmx  lyra.cmxa  lyra.cmxs  lyra.ml  lyra.mli  opam
lyra/demo/: bad.ts  example.ts
lyra/lib/: dune  linter.ml  linter.mli  lyra.ml  types.mli
lyra/test/: dune
